--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#FFD5EC" />
   <title>ผู้จัดการบัญชีเงินกู้</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
   <style>
+    /* [ธีมการตกแต่งเหมือนเดิมตาม Mood & Tone น่ารัก] */
     body {
       font-family: 'Kanit', sans-serif;
       padding: 1rem;
@@ -24,11 +26,11 @@
       0% { transform: scale(0.8); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
-    .character {
+    .character, .footer-character {
       text-align: center;
       margin-bottom: 1rem;
     }
-    .character img {
+    .character img, .footer-character img {
       width: 120px;
       animation: float 3s ease-in-out infinite;
     }
@@ -107,15 +109,7 @@
       border-radius: 5px;
       cursor: pointer;
     }
-    .footer-character {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    .footer-character img {
-      width: 100px;
-    }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>💖 ผู้จัดการบัญชีเงินกู้ ฉบับน่ารัก 💖</h1>
@@ -123,10 +117,113 @@
     <img src="https://i.imgur.com/lXM7M0Z.png" alt="cute character" />
   </div>
 
-  <!-- ส่วนฟอร์มและเนื้อหาอื่น ๆ อยู่ตรงนี้ -->
+  <form id="loanForm">
+    <label>ชื่อ: <input type="text" id="name" required /></label>
+    <label>เงินต้น: <input type="number" id="principal" required /></label>
+    <label>ดอกเบี้ยต่อเดือน (%): <input type="number" id="interestRate" required /></label>
+    <label>วันที่เริ่มยืม (วว/ดด/ปปปป): <input type="text" id="startDate" placeholder="01/08/2568" required /></label>
+    <label>หมายเหตุ: <textarea id="note"></textarea></label>
+    <button type="submit">➕ เพิ่มลูกหนี้</button>
+  </form>
+
+  <div id="loanTable"></div>
+  <div id="summary" class="summary"></div>
 
   <div class="footer-character">
     <img src="https://i.imgur.com/lXM7M0Z.png" alt="cute mascot footer">
   </div>
+
+  <script>
+    let debtors = JSON.parse(localStorage.getItem('debtors')) || [];
+
+    function saveData() {
+      localStorage.setItem('debtors', JSON.stringify(debtors));
+    }
+
+    function parseDateTH(dateStr) {
+      const [d, m, y] = dateStr.split('/');
+      return new Date(parseInt(y) - 543, parseInt(m) - 1, parseInt(d));
+    }
+
+    function render() {
+      let html = '<table><tr><th>ชื่อ</th><th>เงินต้น</th><th>ดอก/เดือน</th><th>เริ่มยืม</th><th>สถานะ</th><th>วันผ่านไป</th><th>ดอกเบี้ยสะสม</th><th>ดอกเบี้ยถัดไป</th><th>วันครบกำหนดถัดไป</th><th>คืนเงิน</th><th>ลบ</th></tr>';
+      let sumPrincipal = 0, sumInterest = 0, nextMonth = 0;
+      const now = new Date();
+
+      debtors.forEach((d, i) => {
+        const start = parseDateTH(d.startDate);
+        const days = Math.floor((now - start) / 86400000);
+        const dailyRate = (d.principal * d.interestRate / 100) / 30;
+        const interestAccrued = dailyRate * days;
+        const nextInterest = dailyRate * 30;
+        const nextDue = new Date(start.getFullYear(), start.getMonth(), start.getDate() + Math.ceil(days / 30 + 1) * 30);
+
+        sumPrincipal += d.principal;
+        sumInterest += interestAccrued;
+        nextMonth += nextInterest;
+
+        html += `<tr>
+          <td>${d.name}</td>
+          <td>${d.principal.toFixed(2)}</td>
+          <td>${d.interestRate}%</td>
+          <td>${d.startDate}</td>
+          <td>${d.status}</td>
+          <td>${days}</td>
+          <td>${interestAccrued.toFixed(2)}</td>
+          <td>${nextInterest.toFixed(2)}</td>
+          <td>${nextDue.toLocaleDateString()}</td>
+          <td><button class='repay-btn' onclick='repay(${i})'>คืนเงิน</button></td>
+          <td><button class='delete-btn' onclick='remove(${i})'>ลบ</button></td>
+        </tr>`;
+      });
+
+      html += '</table>';
+      document.getElementById('loanTable').innerHTML = html;
+      document.getElementById('summary').innerHTML = `
+        ✅ เงินต้นรวมทั้งหมด: ${sumPrincipal.toFixed(2)} บาท<br>
+        ✅ ดอกเบี้ยสะสม: ${sumInterest.toFixed(2)} บาท<br>
+        ✅ ดอกเบี้ยที่คาดว่าจะได้รับเดือนถัดไป: ${nextMonth.toFixed(2)} บาท
+      `;
+    }
+
+    function repay(index) {
+      const amount = parseFloat(prompt("ลูกหนี้คืนเงินต้นจำนวนเท่าไร?"));
+      if (!isNaN(amount)) {
+        debtors[index].principal -= amount;
+        if (debtors[index].principal <= 0) {
+          debtors[index].principal = 0;
+          debtors[index].status = "ปิดบัญชี";
+        } else {
+          debtors[index].status = "คืนบางส่วน";
+        }
+        saveData();
+        render();
+      }
+    }
+
+    function remove(index) {
+      if (confirm("ลบลูกหนี้คนนี้แน่หรือไม่?")) {
+        debtors.splice(index, 1);
+        saveData();
+        render();
+      }
+    }
+
+    document.getElementById("loanForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const principal = parseFloat(document.getElementById("principal").value);
+      const interestRate = parseFloat(document.getElementById("interestRate").value);
+      const startDate = document.getElementById("startDate").value;
+      const note = document.getElementById("note").value;
+
+      debtors.push({ name, principal, interestRate, startDate, note, status: "ค้างชำระ" });
+      saveData();
+      this.reset();
+      render();
+    });
+
+    render();
+  </script>
 </body>
 </html>
