--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
-<!-- เริ่มต้น HTML ทั้งหมด -->
+<!-- วางโค้ดทั้งหมดไว้ในไฟล์ index.html -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#FFD5EC" />
   <title>ผู้จัดการบัญชีเงินกู้</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
       font-family: 'Kanit', sans-serif;
-      padding: 1rem;
       background-color: #FFF6F0;
-      background-image: url('https://cdn.jsdelivr.net/gh/joeyloan/assets@main/bg-yellow-cartoon.jpg');
-      background-repeat: repeat;
-      background-size: contain;
+      background-image: url('https://drive.google.com/uc?id=1aDOu1pysxZjtBhgZgnFYx14gF99_0CT6');
+      background-repeat: no-repeat;
+      background-size: cover;
       background-attachment: fixed;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    body {
+      padding: 1rem;
+      box-sizing: border-box;
+      max-width: 430px;
+      margin: auto;
     }
     h1 {
       color: #FF914D;
       text-align: center;
-      font-size: 2.2rem;
+      font-size: 1.8rem;
       margin-bottom: 1rem;
       text-shadow: 1px 1px #fff4e3;
     }
@@ -29,12 +39,13 @@
       margin-bottom: 1rem;
     }
     .character img, .footer-character img {
-      width: 120px;
+      width: 100px;
     }
     label {
       display: block;
       margin-top: 1rem;
       color: #FF4081;
+      font-size: 0.9rem;
     }
     input, textarea {
       width: 100%;
@@ -44,11 +55,15 @@
       border-radius: 8px;
       font-family: 'Kanit', sans-serif;
       background-color: #fff;
+      font-size: 1rem;
+    }
+    input[type="date"] {
+      font-family: 'Kanit', sans-serif;
     }
     button {
       margin-top: 1rem;
       padding: 0.6rem 1.2rem;
-      background: linear-gradient(45deg, #FFA76C, #FFD4A9);
+      background: linear-gradient(45deg, #FFC371, #FF5F6D);
       color: white;
       border: none;
       border-radius: 10px;
@@ -68,10 +83,11 @@
       background-color: #fffafc;
       border-radius: 14px;
       box-shadow: 0 4px 12px rgba(255, 182, 193, 0.3);
+      font-size: 0.9rem;
     }
     th, td {
       border: 1px solid #f8c1d7;
-      padding: 0.5rem;
+      padding: 0.4rem;
       text-align: left;
     }
     th {
@@ -84,10 +100,10 @@
       padding: 1rem;
       border: 2px dashed #FFC58A;
       border-radius: 10px;
-      font-size: 1rem;
+      font-size: 0.95rem;
     }
     .delete-btn {
-      background: #e91e63;
+      background: #FF5F6D;
       color: white;
       border: none;
       padding: 4px 8px;
@@ -95,7 +111,7 @@
       cursor: pointer;
     }
     .repay-btn {
-      background: #03a9f4;
+      background: #FFC371;
       color: white;
       border: none;
       padding: 4px 8px;
