--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- เริ่มต้น HTML ทั้งหมด -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -13,7 +12,7 @@
       margin: 0;
       font-family: 'Kanit', sans-serif;
       background-color: #FFF6F0;
-      background-image: url('https://drive.google.com/uc?id=1aDOu1pysxZjtBhgZgnFYx14gF99_0CT6');
+      background-image: url('https://drive.google.com/uc?export=view&id=1aDOu1pysxZjtBhgZgnFYx14gF99_0CT6');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
@@ -125,6 +124,6 @@
   </style>
 </head>
 <body>
-<!-- ส่วนอื่นคงเดิม -->
+  <!-- ส่วนเนื้อหา app เช่น ฟอร์ม ปุ่ม ตาราง จะวางไว้ตรงนี้ -->
 </body>
 </html>
